
Tooling
* detect maximum possible segment size on file system (e.g. FAT)
* smrawinfo
  - create
  - print info from info file
* smrawverify
  - get hashes from info file

Test
* retrieve data from the information file on open
* make sure certain values cannot be changed if writing/reading from raw files
* add glob test to msvscpp project

20140728
* updated dependencies
* fixes for FreeBSD 8 compilation
* updated dpkg files

20140621
* updated msvscpp files

20140614
* removed examples

20140612
* worked on Python bindings

20140611
* worked on Python bindings

20140610
* worked on Python bindings

20140119
* 2014 update
* updated dependencies

20131230
* updated dependencies

20131210
* updated dependencies
* smrawmount worked on Dokan support

20130901
* added smrawverify
* worked on tests
  - replaced compare test by smrawverify test
* updated msvscpp files
* code clean up

20130831
* updated dependencies
* added libcthreads build support
* worked on tests

20130520
* Bug fix in dependencies

20130420
* smrawmount added -X option

20130405
* updated dependencies

20130404
* textual changes
* updated dependencies

20130403
* changes due to libmfdata and libfdata merge

20130402
* changes due to libmfdata and libfdata merge
* removed libsmraw_legacy

20130401
* updated dependencies
* changes due to libmfdata and libfdata merge

20130321
* 2013 update
* updated dependencies
* changes due to libmfdata and libfdata merge

20121216
* changes due to libmfdata and libfdata merge

20121201
* updated dependencies
* changes due to libmfcache and libfcache merge
* changes due to libmfdata and libfdata merge

20120923
* updated dependencies
* updates msvscpp files

20120712
* updated dependencies

20120701
* updated dependencies
* libcsplit update

20120630
* updated dependencies

20120519
* updated dependencies
* disabled borland codegear files
* added smrawmount destroy

20120212
* small changes

20120209
* added dpkg files
* updated libnotify, libbfio, libfvalue
