@@ -303,20 +303,6 @@ ssize_t libsmraw_handle_read_buffer_at_offset(
          off64_t offset,
          libsmraw_error_t **error );
 
-/* Reads (media) data at a specific offset
- * Returns the number of bytes read or -1 on error
- *
- * This function is deprecated use libsmraw_handle_read_buffer_at_offset instead
- */
-LIBSMRAW_DEPRECATED \
-LIBSMRAW_EXTERN \
-ssize_t libsmraw_handle_read_random(
-         libsmraw_handle_t *handle,
-         void *buffer,
-         size_t buffer_size,
-         off64_t offset,
-         libsmraw_error_t **error );
-
 /* Writes a buffer to the handle
  * Returns the number of input bytes written, 0 when no longer bytes can be written or -1 on error
  */
@@ -332,20 +318,6 @@ ssize_t libsmraw_handle_write_buffer(
  */
 LIBSMRAW_EXTERN \
 ssize_t libsmraw_handle_write_buffer_at_offset(
-         libsmraw_handle_t *handle,
-         const void *buffer,
-         size_t buffer_size,
-         off64_t offset,
-         libsmraw_error_t **error );
-
-/* Writes (media) data at a specific offset,
- * Returns the number of input bytes written, 0 when no longer bytes can be written or -1 on error
- *
- * This function is deprecated use libsmraw_handle_write_buffer_at_offset instead
- */
-LIBSMRAW_DEPRECATED \
-LIBSMRAW_EXTERN \
-ssize_t libsmraw_handle_write_random(
          libsmraw_handle_t *handle,
          const void *buffer,
          size_t buffer_size,
@@ -518,6 +490,38 @@ int libsmraw_handle_get_file_io_handle(
      libbfio_handle_t **file_io_handle,
      libsmraw_error_t **error );
 #endif
+
+/* -------------------------------------------------------------------------
+ * Handle functions - deprecated
+ * ------------------------------------------------------------------------- */
+
+/* Reads (media) data at a specific offset
+ * Returns the number of bytes read or -1 on error
+ *
+ * This function is deprecated use libsmraw_handle_read_buffer_at_offset instead
+ */
+LIBSMRAW_DEPRECATED \
+LIBSMRAW_EXTERN \
+ssize_t libsmraw_handle_read_random(
+         libsmraw_handle_t *handle,
+         void *buffer,
+         size_t buffer_size,
+         off64_t offset,
+         libsmraw_error_t **error );
+
+/* Writes (media) data at a specific offset,
+ * Returns the number of input bytes written, 0 when no longer bytes can be written or -1 on error
+ *
+ * This function is deprecated use libsmraw_handle_write_buffer_at_offset instead
+ */
+LIBSMRAW_DEPRECATED \
+LIBSMRAW_EXTERN \
+ssize_t libsmraw_handle_write_random(
+         libsmraw_handle_t *handle,
+         const void *buffer,
+         size_t buffer_size,
+         off64_t offset,
+         libsmraw_error_t **error );
 
 /* -------------------------------------------------------------------------
  * Meta data functions
